--- a/css/index.css
+++ b/css/index.css
@@ -36,5 +36,5 @@ table {
 .box {
     width: 1536px;
     height: 700px;
-    background: url("https://ccy652.github.io/images/bg.jpg") no-repeat ;
+    background: url("bg.jpg") no-repeat ;
 }
